2004-04-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/acinclude.m4i (AX_CREATE_STDINT_H) : New macro.
	* configure.in: Use AX_CREATE_STDINT_H(common-src/amanda-int.h).
	* common-src/amanda.h: include "common-src/amanda-int.h".
	* changer-src/scsi-cam.c: Change u_int32_t for uint32_t.
	* client-src/amandad-krb4.c: Change u_int32_t for uint32_t.
	* common-src/krb4-security.c: Change u_int32_t for uint32_t.
	* common-src/krb4-security.h: Change u_int32_t for uint32_t.
	* common-src/protocol.h: Change u_int32_t for uint32_t.
	* common-src/security.c: Change u_int32_t for uint32_t.

2004-04-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Fix for automake 1.8.4.
	* config/acinclude.m4i: Fix for automake 1.8.4.

2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Result of autoupdate.

2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/config.guess: Update from automake 1.8.
	* config/config.sub: Update from automake 1.8.
	* config/depcomp: Update from automake 1.8.
	* config/install-sh: Update from automake 1.8.
	* config/missing: Update from automake 1.8.
	* config/mkinstalldirs: Update from automake 1.8.
	* config/ltmain.sh: Update from libtool-1.5.6.
	* config/libtool.m4i: Update from libtool-1.5.6.

2004-04-26  Marc Mengel <mengel@fnal.gov>

	* tape-src/output-rait.c: Verify reads correctly.

2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (continue_dumps): Fix deadlock if holding disk
	  fill up when in degraded mode.

2004-04-23  Eric Siegerman <eric_97@pobox.com>

	Bug fix: amflush would run, and consume a tape, even if there
	were no Amanda directories waiting to be flushed:
	* common-src/sl.c (is_empty_sl): New function to test
	  whether a list is empty.
	* common-src/sl.h (is_empty_sl): Prototype.
	* server-src/amflush.sh (main): Use is_empty_sl(),
	  rather than ==NULL, to test emptiness of datestamp_list.
